--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -1,25 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmlane - Best movie collections</title>
-
-    <!-- 
-    - favicon
-  -->
+    <title>The LVT - Kho phim chất lượng của bạn</title>
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-
-    <!-- 
-    - custom css link
-  -->
     <link rel="stylesheet" href="./css/site.css">
-
-    <!-- 
-    - google font link
-  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -47,14 +34,13 @@
                     </label>
 
                     <select name="language" id="language">
+                        <option value="vi">VN</option>
                         <option value="en">EN</option>
-                        <option value="au">AU</option>
-                        <option value="ar">AR</option>
-                        <option value="tu">TU</option>
+                        
                     </select>
                 </div>
 
-                <button class="btn btn-primary">Sign in</button>
+                <button class="btn btn-primary">Đăng nhập</button>
 
             </div>
 
@@ -79,23 +65,23 @@
                 <ul class="navbar-list">
 
                     <li>
-                        <a href="./index.html" class="navbar-link">Home</a>
+                        <a href="./index.html" class="navbar-link">Trang chủ</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Movie</a>
+                        <a href="#" class="navbar-link">Phim</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Tv Show</a>
+                        <a href="#" class="navbar-link">Truyền hình</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Web Series</a>
+                        <a href="#" class="navbar-link">Thể loại</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Pricing</a>
+                        <a href="#" class="navbar-link">Báo giá</a>
                     </li>
 
                 </ul>
@@ -138,7 +124,7 @@
 
         </div>
     </header>
-    <div class="container">
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -158,23 +144,23 @@
                     <ul class="footer-list">
 
                         <li>
-                            <a href="./index.html" class="footer-link">Home</a>
+                            <a href="./index.html" class="footer-link">Trang chủ</a>
                         </li>
 
                         <li>
-                            <a href="#" class="footer-link">Movie</a>
+                            <a href="#" class="footer-link">Phim</a>
                         </li>
 
                         <li>
-                            <a href="#" class="footer-link">TV Show</a>
+                            <a href="#" class="footer-link">Truyền hình</a>
                         </li>
 
                         <li>
-                            <a href="#" class="footer-link">Web Series</a>
+                            <a href="#" class="footer-link">Thể loại</a>
                         </li>
 
                         <li>
-                            <a href="#" class="footer-link">Pricing</a>
+                            <a href="#" class="footer-link">Giá</a>
                         </li>
 
                     </ul>
@@ -242,7 +228,7 @@
             <div class="container">
 
                 <p class="copyright">
-                    &copy; 2022 <a href="#">codewithsadee</a>. All Rights Reserved
+                    &copy; 2024 <a href="#">The LVT Movies</a>. All Rights Reserved
                 </p>
 
                 <img src="./assets/images/footer-bottom-img.png" alt="Online banking companies logo"
@@ -255,26 +241,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <!-- 
-    - #GO TO TOP
-  -->
-
     <a href="#top" class="go-top" data-go-top>
         <ion-icon name="chevron-up"></ion-icon>
     </a>
 
-
-
-
-
-    <!-- 
-    - custom js link
-  -->
     <script src="./js/script.js"></script>
 
-    <!-- 
-    - ionicon link
-  -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
