--- a/Movies.WebApp/wwwroot/css/site.css
+++ b/Movies.WebApp/wwwroot/css/site.css
@@ -498,7 +498,7 @@ body.active { overflow: hidden; }
 \*-----------------------------------*/
 
 .hero {
-  background: url("../images/hero-bg.jpg") no-repeat;
+  background: url("../assets/images/hero-bg.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   min-height: 750px;
