update and add pros

--- a/Movies.WebApp/Views/Home/Index.cshtml
+++ b/Movies.WebApp/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
                 <li>
                     <div class="movie-card">
 
-                        <a href="./movie-details.html">
+                        <a asp-controller="Movie" asp-action="Detail">
                             <figure class="card-banner">
                                 <img src="./assets/images/upcoming-1.png" alt="The Northman movie poster">
                             </figure>
