update accountlist manager

--- a/Movies.WebApp/Views/Account/ListAccountManager.cshtml
+++ b/Movies.WebApp/Views/Account/ListAccountManager.cshtml
@@ -1,1 +1,10 @@
-﻿<h1>HIHIIHI</h1>
+﻿@{
+    ViewData["Title"] = "List-Account";
+}
+<div class="container off">
+    <h1 class="text-white">Danh Sách Tài Khoản</h1>
+
+    <div>
+        <button class="btn btn-success"><a class="nav-link text-white">Thêm Mới Tài Khoản</a></button>
+    </div>
+</div>
