--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The LVT - Kho phim chất lượng của bạn</title>
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="./css/site.css">
+    <link rel="shortcut icon" href="~/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="~/css/site.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
 
             <div class="overlay" data-overlay></div>
 
-            <a href="./index.html" class="logo">
-                <img src="./assets/images/logo.svg" alt="Filmlane logo">
+            <a href="~/index.html" class="logo">
+                <img src="~/assets/images/logo.svg" alt="Filmlane logo">
             </a>
 
             <div class="header-actions">
@@ -40,7 +40,8 @@
                     </select>
                 </div>
 
-                <button class="btn btn-primary">Đăng nhập</button>
+                <a asp-controller="Asset" asp-action="SingUp"> <button class="btn btn-primary">Đăng nhập</button> </a>
+                
 
             </div>
 
@@ -52,8 +53,8 @@
 
                 <div class="navbar-top">
 
-                    <a href="./index.html" class="logo">
-                        <img src="./assets/images/logo.svg" alt="Filmlane logo">
+                    <a href="~/index.html" class="logo">
+                        <img src="~/assets/images/logo.svg" alt="Filmlane logo">
                     </a>
 
                     <button class="menu-close-btn" data-menu-close-btn>
@@ -65,7 +66,7 @@
                 <ul class="navbar-list">
 
                     <li>
-                        <a href="./index.html" class="navbar-link">Trang chủ</a>
+                        <a href="~/index.html" class="navbar-link">Trang chủ</a>
                     </li>
 
                     <li>
@@ -137,14 +138,14 @@
 
                 <div class="footer-brand-wrapper">
 
-                    <a href="./index.html" class="logo">
-                        <img src="./assets/images/logo.svg" alt="Filmlane logo">
+                    <a href="~/index.html" class="logo">
+                        <img src="~/assets/images/logo.svg" alt="Filmlane logo">
                     </a>
 
                     <ul class="footer-list">
 
                         <li>
-                            <a href="./index.html" class="footer-link">Trang chủ</a>
+                            <a href="~/index.html" class="footer-link">Trang chủ</a>
                         </li>
 
                         <li>
@@ -231,7 +232,7 @@
                     &copy; 2024 <a href="#">The LVT Movies</a>. All Rights Reserved
                 </p>
 
-                <img src="./assets/images/footer-bottom-img.png" alt="Online banking companies logo"
+                <img src="~/assets/images/footer-bottom-img.png" alt="Online banking companies logo"
                     class="footer-bottom-img">
 
             </div>
@@ -245,7 +246,7 @@
         <ion-icon name="chevron-up"></ion-icon>
     </a>
 
-    <script src="./js/script.js"></script>
+    <script src="~/js/script.js"></script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
