View SignUp && Personal_page

--- a/Movies.WebApp/Views/Asset/Login.cshtml
+++ b/Movies.WebApp/Views/Asset/Login.cshtml
@@ -63,18 +63,18 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
                 <form method="post" class="form-container">
-                    <!-- Email Input -->
+                   
                     <div class="form-group">
-                        <label for="email">Địa chỉ Email</label>
+                        <label for="userName">Tên Đăng Nhập</label>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20">
-                                        <path fill-rule="evenodd" d="M14.243 5.757a6 6 0 10-.986 9.284 1 1 0 111.087 1.678A8 8 0 1118 10a3 3 0 01-4.8 2.401A4 4 0 1114 10a1 1 0 102 0c0-1.537-.586-3.07-1.757-4.243zM12 10a2 2 0 10-4 0 2 2 0 004 0z" clip-rule="evenodd"></path>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-3 16c0-1.58 3-2.45 4.5-2.45.15 0 .3.02.45.05 1.5.28 3.05.89 4.5 2.4-1.4-.72-2.97-1.07-4.5-1.1-1.53-.03-3.1.4-4.5 1.1zm5.97-3.97c-1.22-.21-2.45-.23-3.67 0-.14.02-.3.03-.44.05C9.54 14.65 8.3 15.45 8 16H6c0-1.74 1.79-3.44 4.5-3.44.61 0 1.22.13 1.77.36.04.02.1.03.14.05zm1.53-1.48c.13-.02.27-.03.4-.05 1.22-.23 2.46-.21 3.68 0 .05.02.1.03.16.05.71.14 1.38.33 2 .55-.62-.63-1.32-1.2-2-1.71-.1-.08-.22-.14-.32-.21-1.44-.92-2.98-1.38-4.52-1.38C6.79 9 6 10.79 6 13h2c0-2.21 1.79-4 4-4 .7 0 1.37.16 2 .45z" />
                                     </svg>
                                 </span>
                             </div>
-                            <input type="email" class="form-control" id="email" placeholder="Địa chỉ Email" name="email">
+                            <input type="text" class="form-control" id="userName" placeholder="Tên Đăng Nhập" name="userName">
                             <span class="text-danger">@* Validation message here *@</span>
                         </div>
                     </div>
@@ -105,7 +105,8 @@
                     <button type="submit" class="btn btn-primary btn-block">Đăng nhập</button>
                     <!-- Register Link -->
                     <div class="text-center mt-3">
-                        Chưa có tài khoản? <a href="/dang-ki">Đăng kí</a>
+                        
+                        Chưa có tài khoản? <a  asp-controller="Asset" asp-action="SignUp">Đăng kí</a>
                     </div>
                 </form>
             </div>
