--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     </select>
                 </div>
 
-                <a asp-controller="Asset" asp-action="SingUp"> <button class="btn btn-primary">Đăng nhập</button> </a>
+                <a asp-controller="Asset" asp-action="Login"> <button class="btn btn-primary">Đăng nhập</button> </a>
                 
 
             </div>
@@ -242,6 +242,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    
+
     <a href="#top" class="go-top" data-go-top>
         <ion-icon name="chevron-up"></ion-icon>
     </a>
