--- a/Movies.WebApp/Views/Account/ListAccountManager.cshtml
+++ b/Movies.WebApp/Views/Account/ListAccountManager.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "List-Account";
 }
-<div class="container off">
+<div class="container" style="height: 2000px">
     <h1 class="text-white">Danh Sách Tài Khoản</h1>
 
     <div>
