--- a/Movies.WebApp/Views/Home/Index.cshtml
+++ b/Movies.WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<article>
+<article style="background-color: #1b1a1f">
 
     <!--
       - #HERO
@@ -22,15 +22,15 @@
                 <div class="meta-wrapper">
 
                     <div class="badge-wrapper">
-                        <div class="badge badge-fill">PG 18</div>
+                        <div class="badge badge-fill text-dark">PG 18</div>
 
                         <div class="badge badge-outline">HD</div>
                     </div>
 
                     <div class="ganre-wrapper">
-                        <a href="#">Tìm cảm,</a>
+                        <a href="#" class="nav-link p-0">Tìm cảm,</a>
 
-                        <a href="#">Chính kịch</a>
+                        <a href="#" class="nav-link p-0">Chính kịch</a>
                     </div>
 
                     <div class="date-time">
@@ -51,7 +51,7 @@
 
                 </div>
 
-                <button class="btn btn-primary">
+                <button class="btn text-white fw-bold rounded-pill px-4 py-2 d-flex align-items-center" style="border: 2px solid #e2d703; background-color: #11141d">
                     <ion-icon name="play"></ion-icon>
 
                     <span>Xem ngay</span>
@@ -268,7 +268,7 @@
                     <img src="./assets/images/service-banner.jpg" alt="HD 4k resolution! only $3.99">
                 </figure>
 
-                <a href="./assets/images/service-banner.jpg" download class="service-btn">
+                <a href="./assets/images/service-banner.jpg" download class="service-btn text-decoration-none">
                     <span>Download</span>
 
                     <ion-icon name="download-outline"></ion-icon>
@@ -670,7 +670,7 @@
       - #TV SERIES
     -->
 
-    <section class="tv-series">
+    <section class="tv-series" style="background: url(https://codewithsadee.github.io/filmlane/assets/images/tv-series-bg.jpg) no-repeat">
         <div class="container">
 
             <p class="section-subtitle">Best TV Series</p>
@@ -836,13 +836,13 @@
       - #CTA
     -->
 
-    <section class="cta">
+    <section class="cta py-5" style="background: url(https://codewithsadee.github.io/filmlane/assets/images/cta-bg.jpg) no-repeat">
         <div class="container">
 
             <div class="title-wrapper">
-                <h2 class="cta-title">Trial start first 30 days.</h2>
+                <h2 class="text-uppercase fw-bold m-0">Trial start first 30 days.</h2>
 
-                <p class="cta-text">
+                <p class="cta-text m-0">
                     Enter your email to create or restart your membership.
                 </p>
             </div>
