--- a/Movies.WebApp/Views/Account/ListAccountManager.cshtml
+++ b/Movies.WebApp/Views/Account/ListAccountManager.cshtml
@@ -1,10 +1,38 @@
 ﻿@{
     ViewData["Title"] = "List-Account";
 }
-<div class="container" style="height: 2000px">
-    <h1 class="text-white">Danh Sách Tài Khoản</h1>
+<div class="container py-5">
+    <h1 class="text-center text-uppercase">Danh Sách Tài Khoản</h1>
+
+    <div class="my-5">
+        <button class="btn btn-success"><a class="nav-link text-white">Thêm Mới Tài Khoản</a></button>
+    </div>
 
     <div>
-        <button class="btn btn-success"><a class="nav-link text-white">Thêm Mới Tài Khoản</a></button>
+        <table class="table">
+            <thead class="text-center">
+                <tr>
+                    <th>Họ Tên</th>
+                    <th>Tên Tài Khoản</th>
+                    <th>Email</th>
+                    <th>Giới Tính</th>
+                    <th>Thao Tác</th>
+                </tr>
+            </thead>
+
+            <tbody class="text-center">
+                <tr>
+                    <td>Đặng Trần Xuân Bắc</td>
+                    <td>bacdtx</td>
+                    <td>bacdtxph31853@fpt.edu.vn</td>
+                    <td>Nam</td>
+                    <td>
+                        <a class="btn btn-primary">Chi Tiết</a>
+                        <a class="btn btn-warning">Sửa</a>
+                        <a class="btn btn-danger">Xóa</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
