add view checkout and fix layout of header

--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 
 <body id="top">
-    <header class="header" data-header style="background-color: #1f2229">
+    <header class="header p-0" data-header style="background-color: #1f2229">
         <div class="container">
 
             <div class="overlay" data-overlay></div>
