all movie genre

--- a/Movies.WebApp/Views/Movie/ListOfMoviesGenres.cshtml
+++ b/Movies.WebApp/Views/Movie/ListOfMoviesGenres.cshtml
@@ -31,7 +31,7 @@
 
 </div> *@
 <div style="background: url(https://codewithsadee.github.io/filmlane/assets/images/footer-bg.jpg)">
-    <section class="hero" style="background: url(https://image.tmdb.org/t/p/original/7lmBufEG7P7Y1HClYK3gCxYrkgS.jpg) no-repeat">
+    <section class="hero" style="background: url(https://image.tmdb.org/t/p/original/7lmBufEG7P7Y1HClYK3gCxYrkgS.jpg) no-repeat; background-position:center;">
         <div class="container">
             <div class="hero-content">
                 <h1 class="h1 iron-title">
@@ -114,7 +114,7 @@
                     </li>
 
                     <li>
-                        <button class="filter-btn">Anime</button>
+                        <button class="filter-btn">TV Series</button>
                     </li>
 
                 </ul>
@@ -399,6 +399,160 @@
                         <div class="title-wrapper">
                             <a href="./movie-details.html">
                                 <h3 class="card-title">Người Nhện: Trở Về Nhà</h3>
+                            </a>
+
+                            <time datetime="2017">2017</time>
+                        </div>
+
+                        <div class="card-meta">
+                            <div class="badge badge-outline">2K</div>
+
+                            <div class="duration">
+                                <ion-icon name="time-outline"></ion-icon>
+
+                                <time datetime="PT133M">133 min</time>
+                            </div>
+
+                            <div class="rating">
+                                <ion-icon name="star"></ion-icon>
+
+                                <data>8,4<a href="#"></a></data>
+                            </div>
+                        </div>
+
+                    </div>
+                </li>
+
+            </ul>
+
+        </div>
+        <br />
+        <div class="container">
+
+            <ul class="movies-list  has-scrollbar">
+
+                <li>
+                    <div class="movie-card">
+
+                        <a asp-controller="Movie" asp-action="Detail">
+                            <figure class="card-banner">
+                                <img src="https://image.tmdb.org/t/p/original/cFi3j0Njdoe4Ty8xiqw3BKMnzRv.jpg" alt="Deadpool">
+                            </figure>
+                        </a>
+
+                        <div class="title-wrapper">
+                            <a href="./movie-details.html">
+                                <h3 class="card-title">Deadpool</h3>
+                            </a>
+
+                            <time datetime="2018">2018</time>
+                        </div>
+
+                        <div class="card-meta">
+                            <div class="badge badge-outline">HD</div>
+
+                            <div class="duration">
+                                <ion-icon name="time-outline"></ion-icon>
+
+                                <time datetime="PT134M">134 min</time>
+                            </div>
+
+                            <div class="rating">
+                                <ion-icon name="star"></ion-icon>
+
+                                <data>8.0</data>
+                            </div>
+                        </div>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="movie-card">
+
+                        <a href="./movie-details.html">
+                            <figure class="card-banner">
+                                <img src="https://image.tmdb.org/t/p/original/cYq1wkJK2y44SeX79VXzRZP46iX.jpg"
+                                     alt="Đại Uý Marvel">
+                            </figure>
+                        </a>
+
+                        <div class="title-wrapper">
+                            <a href="./movie-details.html">
+                                <h3 class="card-title">Đại Uý Marvel</h3>
+                            </a>
+
+                            <time datetime="2018">2018</time>
+                        </div>
+
+                        <div class="card-meta">
+                            <div class="badge badge-outline">HD</div>
+
+                            <div class="duration">
+                                <ion-icon name="time-outline"></ion-icon>
+
+                                <time datetime="PT130M">130 min</time>
+                            </div>
+
+                            <div class="rating">
+                                <ion-icon name="star"></ion-icon>
+
+                                <data>7.1</data>
+                            </div>
+                        </div>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="movie-card">
+
+                        <a href="./movie-details.html">
+                            <figure class="card-banner">
+                                <img src="https://image.tmdb.org/t/p/original/fEdXAanbnFl4uoRUAKckJkZ64Xq.jpg" alt="Venom">
+                            </figure>
+                        </a>
+
+                        <div class="title-wrapper">
+                            <a href="./movie-details.html">
+                                <h3 class="card-title">Venom</h3>
+                            </a>
+
+                            <time datetime="2018">2018</time>
+                        </div>
+
+                        <div class="card-meta">
+                            <div class="badge badge-outline">4K</div>
+
+                            <div class="duration">
+                                <ion-icon name="time-outline"></ion-icon>
+
+                                <time datetime="PT159M">159 min</time>
+                            </div>
+
+                            <div class="rating">
+                                <ion-icon name="star"></ion-icon>
+
+                                <data>9.5</data>
+                            </div>
+                        </div>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="movie-card">
+
+                        <a href="./movie-details.html">
+                            <figure class="card-banner">
+                                <img src="https://image.tmdb.org/t/p/original/jTuTXGdugBZTiHuHFV3dHlyqRg9.jpg"
+                                     alt="Morbius">
+                            </figure>
+                        </a>
+
+                        <div class="title-wrapper">
+                            <a href="./movie-details.html">
+                                <h3 class="card-title">Morbius</h3>
                             </a>
 
                             <time datetime="2017">2017</time>
