add new  watch movie and list

--- a/Movies.WebApp/Views/Account/ListOfRentedMovies.cshtml
+++ b/Movies.WebApp/Views/Account/ListOfRentedMovies.cshtml
@@ -28,6 +28,35 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">875392</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">Quật Mộ Trùng Ma</td>
+                    <td class="success" style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f; background-color: rgba(154, 230, 180, 0.16); color: #5cb85c; font-weight: bold;">Thuê Thành Công</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">45.000</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">15/5/2024</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
+                        <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">875392</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">Quật Mộ Trùng Ma</td>
+                    <td class="success" style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f; background-color: rgba(154, 230, 180, 0.16); color: #5cb85c; font-weight: bold;">Thuê Thành Công</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">45.000</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">15/5/2024</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
+                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
+                        <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -40,6 +69,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -52,6 +82,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -64,6 +95,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -76,6 +108,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -88,6 +121,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -100,6 +134,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
 
@@ -112,30 +147,7 @@
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
                     <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
                         <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">875392</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">Quật Mộ Trùng Ma</td>
-                    <td class="success" style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f; background-color: rgba(154, 230, 180, 0.16); color: #5cb85c; font-weight: bold;">Thuê Thành Công</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">45.000</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">15/5/2024</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
-                        <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">875392</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">Quật Mộ Trùng Ma</td>
-                    <td class="success" style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f; background-color: rgba(154, 230, 180, 0.16); color: #5cb85c; font-weight: bold;">Thuê Thành Công</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">45.000</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">15/5/2024</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">16/5/2024</td>
-                    <td style="padding: 12px 15px; text-align: left; border-bottom: 1px solid #3c424f;">
-                        <button type="button" class="btn btn-outline-warning " style="border-color: yellow; color: white">Xem Phim</button>
+                        <button type="button" class="btn btn-outline-success " style="border-color: green; color: white">Thuê Lại</button>
                     </td>
                 </tr>
             </tbody>
