--- a/Movies.WebApp/Views/Movie/ListMovieManager.cshtml
+++ b/Movies.WebApp/Views/Movie/ListMovieManager.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2 class="mt-4 mb-4 text-center">
-   Danh sách Phim
+    Danh sách Phim
 </h2>
 <div class="m-5 p-6">
     <table class="table table-striped table-hover">
@@ -84,7 +84,7 @@
                     <td>
                         <div class="d-flex flex-row justify-content-between">
                             <div>
-                                <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#movieModal">Chi tiết</a>
+                                <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#movieModal" onclick="GetDetail(@item.Id)">Chi tiết</a>
                             </div>
                             <div>
                                 <a class="btn btn-warning">Sửa</a>
@@ -119,14 +119,14 @@
                         <img src="https://image.tmdb.org/t/p/original/q9L8fMYW4dBQOdDAfbbxte7gciJ.jpg" class="img-fluid movie-poster" alt="Poster">
                     </div>
                     <div class="col-md-6 movie-details">
-                        <h4>Người Kim loại 2</h4>
+                        <h4 class="modal-deltail-title">Người Kim loại 2</h4>
                         <div class="movie-description">
-                            <p>Tony Stark tự hé lộ thân phận Người sắt của mình cho công chúng và chìm trong hào quang danh vọng. Một kẻ lạ mặt xuất hiện tấn công anh trên đường đua Monte Carlo. Tony bị hiện tượng nhiễm trùng máu đe dọa mạng sống, còn tên sát thủ kia bắt tay với đối thủ của tập đoàn Stark hòng thôn tính Tony.  Phần 2 của Người sắt là lần đầu tiên trợ thủ Warmachine xuất hiện. Phim cũng tiết lộ những bí mật về cha của Tony, Howard Stark, trước khi dẫn dắt câu chuyện sang nhân vật Captain America, đồng đội tương lai của Người sắt tại tổ chức SHIELD.</p>
+                            <p class="modal-deltail-des">Tony Stark tự hé lộ thân phận Người sắt của mình cho công chúng và chìm trong hào quang danh vọng. Một kẻ lạ mặt xuất hiện tấn công anh trên đường đua Monte Carlo. Tony bị hiện tượng nhiễm trùng máu đe dọa mạng sống, còn tên sát thủ kia bắt tay với đối thủ của tập đoàn Stark hòng thôn tính Tony.  Phần 2 của Người sắt là lần đầu tiên trợ thủ Warmachine xuất hiện. Phim cũng tiết lộ những bí mật về cha của Tony, Howard Stark, trước khi dẫn dắt câu chuyện sang nhân vật Captain America, đồng đội tương lai của Người sắt tại tổ chức SHIELD.</p>
                         </div>
-                        <p><strong>Thể loại:</strong> Action, Adventure</p>
-                        <p><strong>Độ dài:</strong> 120 phút</p>
-                        <p><strong>Kinh phí:</strong> $100 triệu</p>
-                        <p><strong>Giá thuê:</strong> $5.99</p>
+                        <div><strong>Thể loại:</strong> <p class="modal-deltail-genre">Action</p></div>
+                        <div><strong>Độ dài:</strong><p class="modal-deltail-duration"></p></div>
+                        <div><strong>Kinh phí:</strong> <p class="modal-deltail-bud">100000</p> USD</div>
+                        <div><strong>Giá thuê:</strong> <p class="modal-deltail-price"> 59000</p>  VND</div>
                     </div>
                 </div>
             </div>
@@ -137,3 +137,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    function GetDetail(id) {
+        console.log(id);
+        var obj = fetch()
+    }
+</script>
