--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -78,8 +78,23 @@
                         <a href="#" class="navbar-link text-decoration-none">Truyền hình</a>
                     </li>
 
-                    <li>
+                    <li class="position-relative">
                         <a href="#" class="navbar-link text-decoration-none">Thể loại</a>
+                      
+                        <div class="genre-dropdown position-fixed z-3 border-1 bg-dark bg-opacity-75 rounded-3 text-light shadow-sm" style="background-color: #1f2229">
+                            <ul>
+                                <li class="genre">Hành động</li>
+                                <li class="genre">Hài hước</li>
+                                <li class="genre">Tình cảm</li>
+                                <li class="genre">Kinh dị</li>
+                                <li class="genre">Khoa học viễn tưởng</li>
+                                <li class="genre">Hồi hộp</li>
+                                <li class="genre">Lãng mạn</li>
+                                <li class="genre">Huyền bí</li>
+                                <li class="genre">Phiêu lưu</li>
+                                <li class="genre">Hoạt hình</li>
+                            </ul>
+                        </div>
                     </li>
 
                     <li>
