--- a/Movies.WebApp/wwwroot/css/site.css
+++ b/Movies.WebApp/wwwroot/css/site.css
@@ -7,69 +7,94 @@
  */
 
 
+.genre-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 1000;
+}
 
+    .genre-dropdown .genre{
+        color:white;
+    }
+        .genre-dropdown .genre:hover {
+            color: #e2d703;
+        }
+    
 
+    .genre-dropdown.active {
+        display: block;
+    }
+
+.genre-dropdown ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    column-count: 3;
+}
+
+    .genre-dropdown ul li {
+        cursor: pointer;
+    }
+
+        .genre-dropdown ul li:hover {
+            color: blue;
+        }
 
 /*-----------------------------------*\
  * #CUSTOM PROPERTY
 \*-----------------------------------*/
-
 :root {
-
-  /**
+    /**
    * colors
    */
 
-  --rich-black-fogra-29: hsl(225, 25%, 9%);
-  --rich-black-fogra-39: hsl(170, 21%, 5%);
-  --raisin-black: hsl(228, 13%, 15%);
-  --eerie-black: hsl(207, 19%, 11%);
-  --light-gray: hsl(0, 3%, 80%);
-  --gunmetal-1: hsl(229, 15%, 21%);
-  --gunmetal-2: hsl(216, 22%, 18%);
-  --gainsboro: hsl(0, 7%, 88%);
-  --citrine: hsl(57, 97%, 45%);
-  --xiketic: hsl(253, 21%, 13%);
-  --gray-x: hsl(0, 0%, 74%);
-  --white: hsl(0, 100%, 100%);
-  --black: hsl(0, 0%, 0%);
-  --jet: hsl(0, 0%, 20%);
-
-  /**
+    --rich-black-fogra-29: hsl(225, 25%, 9%);
+    --rich-black-fogra-39: hsl(170, 21%, 5%);
+    --raisin-black: hsl(228, 13%, 15%);
+    --eerie-black: hsl(207, 19%, 11%);
+    --light-gray: hsl(0, 3%, 80%);
+    --gunmetal-1: hsl(229, 15%, 21%);
+    --gunmetal-2: hsl(216, 22%, 18%);
+    --gainsboro: hsl(0, 7%, 88%);
+    --citrine: hsl(57, 97%, 45%);
+    --xiketic: hsl(253, 21%, 13%);
+    --gray-x: hsl(0, 0%, 74%);
+    --white: hsl(0, 100%, 100%);
+    --black: hsl(0, 0%, 0%);
+    --jet: hsl(0, 0%, 20%);
+    /**
    * typography
    */
 
-  --ff-poppins: 'Poppins', sans-serif;
-
-  --fs-1: 36px;
-  --fs-2: 32px;
-  --fs-3: 30px;
-  --fs-4: 24px;
-  --fs-5: 20px;
-  --fs-6: 18px;
-  --fs-7: 16px;
-  --fs-8: 15px;
-  --fs-9: 14px;
-  --fs-10: 13px;
-  --fs-11: 12px;
-  --fs-12: 11px;
-
-  --fw-500: 500;
-  --fw-700: 700;
-
-  /**
+    --ff-poppins: 'Poppins', sans-serif;
+    --fs-1: 36px;
+    --fs-2: 32px;
+    --fs-3: 30px;
+    --fs-4: 24px;
+    --fs-5: 20px;
+    --fs-6: 18px;
+    --fs-7: 16px;
+    --fs-8: 15px;
+    --fs-9: 14px;
+    --fs-10: 13px;
+    --fs-11: 12px;
+    --fs-12: 11px;
+    --fw-500: 500;
+    --fw-700: 700;
+    /**
    * transition
    */
 
-  --transition-1: 0.15s ease;
-  --transition-2: 0.25s ease-in;
-
-  /**
+    --transition-1: 0.15s ease;
+    --transition-2: 0.25s ease-in;
+    /**
    * spacing
    */
 
-  --section-padding: 100px;
-
+    --section-padding: 100px;
 }
 
 
