--- a/Movies.WebApp/Views/Shared/_Layout.cshtml
+++ b/Movies.WebApp/Views/Shared/_Layout.cshtml
@@ -77,6 +77,9 @@
                     <li>
                         <a href="#" class="navbar-link text-decoration-none">Truyền hình</a>
                     </li>
+                    <li>
+                        <a href="#" class="navbar-link text-decoration-none">Quốc Gia</a>
+                    </li>
 
                     <li class="position-relative">
                         <a href="#" class="navbar-link text-decoration-none">Thể loại</a>
